finished styling and responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -3,41 +3,149 @@
 }
 
 body {
-    margin: 20px;
+    background: #111;
+    font-family: 'Nosifer', cursive;
+    background-image: url(../images/bkg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#header {
+    height: 120px;
+    padding: 35px;
+    width: 100%;
+    text-align: center;
+    background: #111;
+    color: #fcfcfc;
+    border-bottom: solid 5px #590000;
+}
+
+h1 {
+    font-family: 'Creepster', cursive;
+    font-size: 52px;
+}
+
+#button-display {
+    width: 80%;
+    margin: auto;
+    height: 50px;
+    overflow: scroll;
+}
+
+.gif-button {
+    font-family: 'Smythe', cursive;
+    font-size: 16px;
+    color: #fcfcfc;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    background: #111;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.gif-button:hover {
+    background: #590000;
+}
+
+.gif-button:focus {
+    background: #590000;
+    outline: 0;
+}
+
+#gif-form {
+    width: 80%;
+    margin: auto;
+    color: #111;
+}
+
+#gif-input {
+    padding: 10px;
+    margin: 10px;
+    border: solid 2px #111;
+    border-radius: 5px;
+    background:#fcfcfc;
+    width: 300px;
+}
+
+#add-button {
+    display: none;
 }
 
 #gif-display {
-    color: #eee;
-    padding: 20px;
-    width: 300px;
-    height: 600px;
+    width: 80%;
+    margin: auto;
+    background: #fcfcfc;
+    max-height: 450px; 
     overflow: scroll;
-    background: #222;
-    border: solid 3px #eee;
+    font-size: 12px;
+    border: solid 4px #590000;
     border-radius: 10px;
 }
 
 .gif-container {
+    display: block;
+    float: left;
     margin: 20px;
 }
 
 .gif {
-    border: solid 3px #eee;
+    border: solid 5px #111;
     border-radius: 10px;
     margin-bottom: 10px;
-    width: 100%;
+    height: 150px;
+    width: auto;
+    cursor: pointer;
 }
 
-hr {
-    margin-top: 20px;
+.hide {
+    display: none;
 }
 
-.gif-button {
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
-    background: #222;
-    color: #eee;
-    font-size: 16px;
-    margin: 5px;
+/* RESPONSIVENESS */
+
+@media screen and (max-width: 768px) {
+    body {
+        background: #fcfcfc;
+    }
+
+    #button-display {
+        width: 80%;
+        margin: auto;
+        height: 100px;
+        overflow: scroll;
+    }
+
+    #gif-display {
+        width: 90%;
+        border: none;
+        max-height: 650px;
+    } 
 }
+
+@media screen and (max-width: 640px) {
+    
+    #header {
+        height: 80px;
+        padding: 20px;
+    }
+    
+    h1 {
+        font-size: 42px;
+    }
+
+    #gif-input {
+        margin: 0px;
+        margin-top: 10px;
+    }
+}
+
+/* 
+FONT BANK
+
+font-family: 'Eater', cursive;
+font-family: 'Creepster', cursive;
+font-family: 'Nosifer', cursive;
+font-family: 'Smythe', cursive; 
+
+*/
